workshop03/mysql-pvc.yaml
---
kind: Namespace
apiVersion: v1

metadata:
    name: myns
    labels:
        app: myapp
