workshop03/fortune.yaml
# ---
# kind: Pod
# apiVersion: v1

# metadata:
#     name: fortune
#     namespace: myns #To deploy into the namespace, otherwise will go to default
#     labels:
#       app: fortune
#       version: "v1"

# spec:
#   containers:
#     - name: fortune
#       image: stackupiss/fortune:v1
#       imagePullPolicy: Always
#       ports:
#       - name: httpport
#         containerPort: 3000

#---------------------------------------------------------------------------------------------
---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: fortune-deployment
  namespace: myns   # Always have a namespace to contain damage if things go bad
  labels:
    app: fortune
    version: v1

spec:
  replicas: 2           # Indicates how many pods to manage
  selector:             # How to recognize own pod
    matchLabels:     # Tells k8s how to select the pods for the deployment according to the parameters
      app: fortune-pod  # Only select pods with this name
      version: v1       # Only select pods running v1 (this may cause confusion if mix versions, so it will randomly select)
  #strategy:            # To decide how to update the pods (rolling/recreate)
  template:             # Refers to the pod template, how the pod will look like
    metadata: 
      name: fortune-pod
      labels:
        app: fortune-pod
        version: v1
    spec:
      containers:
      - name: fortune
        image: stackupiss/fortune:v1
        imagePullPolicy: Always
        ports:
        - name: app-port
          containerPort: 3000

# ---
# kind: Pod
# apiVersion: v1

# metadata:
#   name: fortune
#   namespace: myns
#   labels:
#     app: fortune
#     version: v1
